syntax ="proto3";

service FeedbackService {
    rpc GetFeedbackLike(RecipeId) returns (FeedbackLikeList) {}
    rpc GetFeedbackComment(RecipeId) returns (FeedbackCommentList) {}
}

message Empty{}

message FeedbackCommentList{
    repeated FeedbackComment comment=1;
}

message FeedbackLikeList{
    repeated FeedbackLike like=2;
}

message FeedbackComment{
    string feedback_id =1;
    string user_id=2;
    string recipe_id=3;
    string comment=4;
}

message FeedbackLike{
    string feedback_id =1;
    string user_id=2;
    string recipe_id=3;
    string vote=4;
}

message RecipeId{
    string recipe_id=1;
}